fix(java): resolve Java 17 compatibility issues
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Replace deprecated wrapper constructors (Character, Double, Float) with valueOf()
- Fix Proxy.newProxyInstance() classloader to handle null context classloader
- Fix BasicProfile transform method to correctly handle prefix with propertyFirstUpper

BREAKING CHANGE: Renamed Profile.remove(sectionName, optionName) to removeOption() to avoid conflict with Map.remove() in Java 17+. Users must update calls from profile.remove(section, option) to profile.removeOption(section, option).